[project]
name = "scheduled"
version = "0.1.0"
description = "saving time with scheduled reports from Arbor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.8",
    "asyncio>=3.4.3",
    "datetime>=5.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "urllib3>=2.2.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
[tool.pytest.ini_options]
pythonpath = "src"
